--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -76,6 +76,8 @@ service_station=Regler
 big-sand-rock-underwater=Sandstein
 maraxsis-trench-duct=Grabenschacht
 maraxsis-mollusk-husk=Muschelschale
+maraxsis-conduit=Effektverteilungsknoten
+maraxsis-polylplast=Polylplast
 
 [entity-description]
 constructron=Automatisiertes Diesel-U-Boot, das Unterwasser-Konstruktionsaufgaben ausführt. Hat keine Reichweitenbeschränkung und kann Geisterkonstruktionen auch ohne Roboport errichten.\nBenötigt eine [entity=service_station], um Materialien bereitzustellen.
@@ -92,6 +94,8 @@ sp-spidertron-dock=Verbindet sich automatisch mit einem darüber schwebenden U-B
 service_station=Verbraucht 5/s [fluid=maraxsis-atmosphere], um positiven Druck in der Kuppel aufrechtzuerhalten. Stellt Baumaterialien für Konstruktions-U-Boote bereit.
 maraxsis-trench-duct=Ein extrem langes und robustes Rohr, das Flüssigkeiten direkt in den Graben und zurück transportiert.\nMuss auf [tile=maraxsis-trench-entrance] platziert werden.\nBenötigt [item=cliff-explosives], um einen Weg freizuräumen.
 maraxsis-trench-duct-lower=Ein extrem langes und robustes Rohr, das Flüssigkeiten direkt in den Graben und zurück transportiert.
+maraxsis-conduit=Fortgeschrittener Effektverteiler, der sowohl an Land als auch auf dem Meeresboden plaziert werden kann. Er hat eine große Reichweite und akzeptiert auch Qualitätsmodule.
+maraxsis-polylplast=Eine Ansammlung von milionen winziger Tierchen.
 
 [item-name]
 hydraulic-science-pack=Wissenschaftspaket für Hydraulik
@@ -109,8 +113,8 @@ maraxsis-tropical-fish=Tropischer Fisch
 maraxsis-microplastics=Mikroplastik
 maraxsis-torpedo=Torpedo
 maraxsis-explosive-torpedo=Explosiver Torpedo
-maraxsis-atomic-torpedo=Atomic torpedo
-maraxsis-torpedo-launch-silo=Torpedo launch silo
+maraxsis-atomic-torpedo=Atomtorpedo
+maraxsis-torpedo-launch-silo=Torpedosilo
 maraxsis-salted-fish=Gepökelter Fisch
 maraxsis-salted-tropical-fish=Gepökelter tropischer Fisch
 maraxsis-defluxed-bioflux=Defluxiertes Bioflux
@@ -135,9 +139,6 @@ maraxsis-defluxed-bioflux=Nicht mehr in Fluss.
 maraxsis-coral=Ein Unterwasserorganismus, der große Kolonien bildet. Abgebaut von [entity=maraxsis-coral].
 maraxsis-microplastics=Igitt! Was ist das alles?
 maraxsis-super-sealant-substance=Schützt vor Wasser und Druck.
-spe-open-inventory=__CONTROL__spidertron-enhancements-open-vehicle-inventory__, um das Inventar des Spidertrons zu öffnen.
-spe-open-in-map=__CONTROL__spidertron-enhancements-open-in-map__, um das Spidertron auf der Karte anzuzeigen.
-spe-use-pathfinder=__ALT_CONTROL__1__spidertron-enhancements-use-alt-spidertron-remote__, um das Spidertron mit Pfadfindung zu senden.
 maraxsis-fat-man=Bringt den Donner! Eine Langstrecken-Nuklearartilleriegranate.
 
 [fluid-name]
@@ -149,7 +150,7 @@ maraxsis-atmosphere=Atmosphäre
 maraxsis-liquid-atmosphere=Flüssige Atmosphäre
 
 [fluid-description]
-maraxsis-saline-water=Wasser mit mindestens 30 Promille Salzgehalt.Plaziere eine [entity=offshore-pump] irgendwo auf [planet=maraxsis] um Salzwasser zu fördern.
+maraxsis-saline-water=Wasser mit mindestens 30 Promille Salzgehalt. Plaziere eine [entity=offshore-pump] irgendwo auf [planet=maraxsis] um Salzwasser zu fördern.
 maraxsis-brackish-water=Wasser mit mindestens ein Promille an Salz. Kann in Süßwasser aufbereitet werden.
 maraxsis-atmosphere=Eine Mischung aus gasförmigen Sauerstoff und Stickstoff. Diese Flüssigkeit kann kostenfrei in einem [entity=chemical-plant] auf jedem anderen Planeten außer [planet=maraxsis] erstellen werden.
 
@@ -167,6 +168,7 @@ maraxsis-hydrolox-rocket-fuel=Hydrolox Raketentreibstoff
 maraxsis-geothermal-sulfur=Geothermaler Schwefel
 maraxsis-nutrients-from-tropical-fish=Nährstoffe aus tropischen Fisch
 maraxsis-fluid-void=Leere 100 × __1__
+maraxsis-petroleum-gas-cracking=Flüssiggas zu Schweröl formieren
 
 [recipe-description]
 maraxsis-electricity=Erzeuge mehr Energie basieren auf der Qualität des Salzes.\n__1__
@@ -203,7 +205,7 @@ maraxsis-easy-mode=Einfacher Modus (Easy mode)
 
 [mod-setting-description]
 maraxsis-water-opacity=Kontrolliert die Dursichtigkeit von Wasser auf [planet=maraxsis]. Niedrigere Werte macht das Wasser transparenter.
-maraxsis-easy-mode=Tauscht die +50% Basisqualität der Hydraulikanlage durch eine +50% Basisproduktion aus.  Dadurch vereinfachten sich  viele Rezeptketten auf [planet=maraxsis].
+maraxsis-easy-mode=Tauscht die +50% Basisqualität der Hydraulikanlage durch eine +50% Basisproduktion aus. Dadurch vereinfachten sich viele Rezeptketten auf [planet=maraxsis].
 
 [maraxsis]
 cannot-submerge=Kann jetzt nicht abtauchen. Du musst über einem Grabeneingang sein.
@@ -240,40 +242,24 @@ maraxsis-coral=[entity=maraxsis-coral] Korallenriff
 [cant-build-reason]
 no-resource-for-drill=Keine abbaubaren Ressourcen vorhanden!
 
-[shortcut]
-make-spidertron-remote=Spidertron-Fernbedienung erstellen
 
 [controls]
-give-spidertron-remote=Spidertron-Fernbedienung
-spidertron-enhancements-use-alt-spidertron-remote=Befehl zum Spidertron mit Pfadfinder
-spidertron-enhancements-enter-vehicles=Fahrmodus umschalten
-spidertron-enhancements-spidertron-pipette=Spidertron-Pipettenwerkzeug
-spidertron-enhancements-spidertron-patrol-pipette=Spidertron-Patrouillen-Pipettenwerkzeug
-spidertron-enhancements-open-vehicle-inventory=Fahrzeug-GUI öffnen
-spidertron-enhancements-open-in-map=Spidertron auf Karte anzeigen
-spidertron-enhancements-recall-shortcut=Zuletzt genutztes Spidertron rufen
 ctron-get-selection-tool=Bauboot-Auswahlwerkzeug erhalten
 ctron-open-ui=Bauboot-Steuerzentrale öffnen
 maraxsis-trench-submerge=In den Tiefseegraben abtauchen
 
 [controls-description]
 maraxsis-trench-submerge=Taucht in den Graben ab, während du ein U-Boot steuerst. Funktioniert nur, wenn das U-Boot betankt ist.
-spidertron-enhancements-use-alt-spidertron-remote=Wird mit der Spidertron-Fernbedienung verwendet, um das verbundene Spidertron mithilfe des Pfadfinders zu befehligen.
-spidertron-enhancements-enter-vehicles=Das Ergebnis hängt davon ab, ob du dich in der Nähe eines Fahrzeugs befindest oder nicht, und kann in den Mod-Einstellungen konfiguriert werden.\n[color=red]Nicht auf dieselbe Steuerung wie das Vanilla-Kommando [font=default-bold]Fahrzeug betreten/verlassen[/font] (__CONTROL__toggle-driving__) setzen[/color].
-spidertron-enhancements-spidertron-pipette=Wählt eine Fernbedienung aus deinem Inventar, die mit dem aktuell ausgewählten Spidertron verbunden ist, und platziert sie in deinem Cursor.\nFalls kein Spidertron ausgewählt ist, wird eine Fernbedienung ausgewählt, die mit dem Spidertron verbunden ist, das du gerade steuerst.
-spidertron-enhancements-spidertron-patrol-pipette=Wählt eine Patrouillen-Fernbedienung aus deinem Inventar, die mit dem aktuell ausgewählten Spidertron verbunden ist, und platziert sie in deinem Cursor.\nFalls kein Spidertron ausgewählt ist, wird eine Patrouillen-Fernbedienung ausgewählt, die mit dem Spidertron verbunden ist, das du gerade steuerst.
-spidertron-enhancements-open-vehicle-inventory=Wenn du eine Spidertron-Fernbedienung hältst, öffnet sich das Inventar des verbundenen Spidertrons.\nAndernfalls wird das Inventar des Fahrzeugs geöffnet, das du gerade steuerst.
 
 [gui]
-instruction-to-order-spidertron=__1__ senden, um Spidertron zu befehligen.
+instruction-to-order-spidertron= Drücke __1__ um Spidertron zu senden.
 instruction-to-select-spiders=__1__ gedrückt halten und ziehen, um Spidertrons auszuwählen.
 instruction-to-alt-select-spiders=__1__ gedrückt halten und ziehen, um Spidertrons zur Auswahl hinzuzufügen.
 instruction-to-deselect-spiders=__1__ gedrückt halten und ziehen, um Spidertrons aus der Auswahl zu entfernen.
 instruction-to-queue-spidertron-order=__1__ drücken, um einen Bewegungsbefehl in die Warteschlange zu stellen.\n•   __ALT_CONTROL__1__spidertron-enhancements-use-alt-spidertron-remote__ senden, um Spidertron mit Pfadfindung zu bewegen.\n•   __CONTROL__spidertron-enhancements-open-in-map__ Spidertron auf der Karte anzeigen.\n•   __CONTROL__spidertron-enhancements-open-vehicle-inventory__ öffnen, um das Inventar des Spidertrons anzuzeigen.
 
-[shortcut-name]
-spidertron-enhancements-recall-shortcut=Letzten genutzten Spidertron rufen
-ctron-get-selection-tool=Bauboot-Auswahlwerkzeug
+[shortcut-name]	
+ctron-get-selection-tool=Bauboot Auswahlwerkzeug
 ctron-open-ui=Steuerzentrale
 
 [cursor-message]
